<resources>
    <string name="app_name">简约天气</string>
    <string name="title_activity_search_city">SearchCityActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_show_weather">ShowWeatherActivity</string>
    <string name="publish_time">发布时间：</string>
    <string name="separate_text">~</string>
    <string name="search_hint">请输入城市(如“北京”、“beijing”或“bj”)</string>
    <string name="daily_forecast_today">今天</string>
    <string name="daily_forecast_tmr">明天</string>
    <string name="load_city_progress_title">加载城市数据</string>
    <string name="daily_forecast_day_after_tmr">后天</string>
    <string name="load_city_progress_message">首次加载数据可能需要十几秒钟，请等待…</string>
    <string name="updating">更新中…</string>
    <string name="update_failed">获取天气数据失败</string>
    <string name="celsius">°C</string>
    <string name="alert_message">请检查网络或稍后再试</string>
    <string name="month">月</string>
    <string name="day_of_month">日</string>
    <string name="date">日期</string>
    <string name="weather">天气</string>
    <string name="temperature">气温</string>
    <string name="wind_direction">风向</string>
    <string name="wind_source">风力</string>
    <string name="days_title">7日天气</string>
    <string name="switch_city">切换城市</string>
    <string name="update_weather">更新天气</string>
    <string name="select_city">选择城市</string>
    <string name="update_time">更新时间：</string>
</resources>
