<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#0097a7">
        <Button
            android:id="@+id/switch_city_btn"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="5dp"
            android:layout_centerVertical="true"
            android:text="@string/switch_city"
            android:textSize="12sp"
            android:textColor="#333"/>
        <Button
            android:id="@+id/update_weather_btn"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:padding="5dp"
            android:layout_centerVertical="true"
            android:text="@string/update_weather"
            android:textSize="12sp"
            android:textColor="#333"/>
        <TextView
            android:id="@+id/title_main"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="#fff"
            android:textSize="24sp"
            android:text="@string/app_name" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="#00bcd4">
        <TextView
            android:id="@+id/update_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/update_time"
            android:textColor="#b2ebf2"/>
        <TextView
            android:id="@+id/update_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/update_time_text"
            android:layout_toEndOf="@id/update_time_text"
            android:padding="5dp"
            android:textColor="#b2ebf2"/>
        <TextView
            android:id="@+id/temp_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#fff"
            android:textSize="70sp"/>
        <TextView
            android:id="@+id/city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/temp_now"
            android:layout_centerHorizontal="true"
            android:textColor="#fff"
            android:textSize="24sp"/>
        <TextView
            android:id="@+id/weather_text_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/temp_now"
            android:layout_centerHorizontal="true"
            android:textColor="#fff"
            android:textSize="30sp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/days_title"
            android:gravity="center"
            android:textColor="#0097a7"
            android:textSize="25sp" />
        <LinearLayout
            android:id="@+id/lv_title"
            android:layout_below="@id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:textSize="15sp"
                android:text="@string/date"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:textSize="15sp"
                android:text="@string/weather"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:textSize="15sp"
                android:text="@string/temperature"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:textSize="15sp"
                android:text="@string/wind_direction"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:textSize="15sp"
                android:text="@string/wind_source"/>
        </LinearLayout>
        <ListView
            android:id="@+id/daily_forecast_lv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/lv_title"/>
    </RelativeLayout>
</LinearLayout>
